[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Player3.gd" type="Script" id=1]
[ext_resource path="res://media/player1.png" type="Texture" id=2]
[ext_resource path="res://media/opengameart/LittleRobotSoundFactory/Jump_02.wav" type="AudioStream" id=3]
[ext_resource path="res://media/opengameart/LittleRobotSoundFactory/Hero_Death_00.wav" type="AudioStream" id=4]
[ext_resource path="res://media/opengameart/LittleRobotSoundFactory/Shoot_03.wav" type="AudioStream" id=5]
[ext_resource path="res://media/opengameart/LittleRobotSoundFactory/Explosion_02.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/PlayerFloat.tres" type="Animation" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 62 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
flip_h = true
hframes = 4

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="KillMonsterSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="BulletHolder" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "PlayerFloat"
anims/PlayerFloat = ExtResource( 7 )
